<resources>
    <string name="app_name">Student CRUD App</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="age">Age</string>
    <string name="student_number">Student Number</string>
    <string name="register">Register</string>
    <string name="refresh">Refresh</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>